--- a/6-websockets/public/index.html
+++ b/6-websockets/public/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
       <head>
             <meta charset="utf-8">
@@ -9,7 +8,7 @@
             <link rel="stylesheet" href="styles.css">
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
             <script src="/socket.io/socket.io.js"></script>
-            <script src="../src/index.js"></script>
+            <script src="js/index.js"></script>
       </head>
       <body>
             <div  class="container">
@@ -44,7 +43,7 @@
                                     </tr>
                               </thead>
                               <tbody id="tabla">
-                                    <%-  include('../partials/table') %>
+
                               </tbody>
                         </table>         
                   </div>
@@ -55,7 +54,7 @@
                         <form onsubmit="addMessage(this)" class="chat">
                               <input type="email" class="form-control" id="email" placeholder="Tu email" name="email"><br>
                               <div class="mensajes" id="mensajes">
-                                    <%- include('../partials/chat') %>
+                                    
                               </div>
                               <input type="text" class="form-control" id="texto" placeholder="Cuéntanos algo..." name="texto">
                               <input type="submit" value="Enviar">
