--- a/6-websockets/public/index.html
+++ b/6-websockets/public/index.html
@@ -16,7 +16,8 @@
       <body>
             <div  class="container">
                   <div>
-                        <h1>Ingrese Producto</h1>
+                        <h2>Ingrese Producto</h2>
+                        <br>
                         <form onsubmit="addProduct(this)">
                               <div class="mb-3">
                                     <label for="nombre" class="form-label">Nombre</label>
@@ -45,16 +46,15 @@
                                           <th scope="col">Img</th>
                                     </tr>
                               </thead>
-                              <tbody id="tabla">
-
-                              </tbody>
+                              <tbody id="tabla"></tbody>
                         </table>         
                   </div>
                   <a href="http://localhost:8080/test", type="button">TEST</a>
             </div>
             <div class="containerMensajes">
                   <div>
-                        <h1>Centro de Mensajes</h1>
+                        <h2>Centro de Mensajes</h2>
+                        <br>
                         <p id="compresion"></p>
                         <form onsubmit="addMessage(this)" class="chat">
                               <div class="chat-form">
